# biology_bot_ssc

./: Procfile  app.py  biology_intents.json  build.sh  chatbot_model.h5  classes.pkl  intents.json  pyproject.toml  render.yaml  requirements.txt  run.bat  run.sh  train.py  train_light.py  words.pkl
templates/: index.html
