[tool.poetry]
name = "biology-chatbot"
version = "1.0.0"
description = "AI Chatbot for Bangladesh Class 9-10 Biology"
authors = ["Shishir Dey <your-email@example.com>"]

[tool.poetry.dependencies]
python = "3.9.16"
flask = "2.3.3"
gunicorn = "20.1.0"
nltk = "3.8.1"
numpy = "1.24.3"
scikit-learn = "1.3.0"
joblib = "1.3.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"